added clear city list feature, a local storage function that saves city names that users search, renders a city weather data on load, a few css changes, a few html changes.

--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@ header{
 .badge-orange{
     background-color: orange;
 }
+
+.align-left{
+    justify-content: left;
+}
+
+li {
+    text-transform: capitalize;
+  }
